# WolkGatewayModule-Modbus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  RELEASE_NOTES.txt  conanfile.txt  configure.sh  uninstall.sh
.github/workflows/: cmake-build-and-test.yml
application/: Application.cpp  DeviceConfiguration.cpp  DeviceConfiguration.h  JsonReaderParser.h  ModuleConfiguration.cpp  ModuleConfiguration.h  SerialRtuConfiguration.cpp  SerialRtuConfiguration.h  TcpIpConfiguration.cpp  TcpIpConfiguration.h
cmake/: clang-format.cmake
debian/: changelog  control  dirs  postrm  rules  wolkgatewaymodule-modbus.service
dependencies/: download.sh  make.sh
docs/: DeviceInformation_8h_source.html  DevicesConfigurationTemplate_8h_source.html  DevicesConfiguration_8h_source.html  JsonReaderParser_8h_source.html  ModbusBridge_8h_source.html  ModbusDeviceFactory_8h_source.html  ModuleConfiguration_8h_source.html  ModuleMapping_8h_source.html  RegisterMappingFactory_8h_source.html  SerialRtuConfiguration_8h_source.html  TcpIpConfiguration_8h_source.html  WolkaboutTemplateFactory_8h_source.html  annotated.html  annotated_dup.js  classWolkabout_1_1ModbusDeviceFactory.html  classes.html  classwolkabout_1_1DeviceInformation-members.html  classwolkabout_1_1DeviceInformation.html  classwolkabout_1_1DeviceInformation.js  classwolkabout_1_1DevicesConfiguration-members.html  classwolkabout_1_1DevicesConfiguration.html  classwolkabout_1_1DevicesConfiguration.js  classwolkabout_1_1DevicesConfigurationTemplate-members.html  classwolkabout_1_1DevicesConfigurationTemplate.html  classwolkabout_1_1DevicesConfigurationTemplate.js  classwolkabout_1_1JsonReaderParser-members.html  classwolkabout_1_1JsonReaderParser.html  classwolkabout_1_1MappingTypeConversion-members.html  classwolkabout_1_1MappingTypeConversion.html  classwolkabout_1_1ModbusBridge-members.html  classwolkabout_1_1ModbusBridge.html  classwolkabout_1_1ModbusBridge.js  classwolkabout_1_1ModuleConfiguration-members.html  classwolkabout_1_1ModuleConfiguration.html  classwolkabout_1_1ModuleConfiguration.js  classwolkabout_1_1ModuleMapping-members.html  classwolkabout_1_1ModuleMapping.html  classwolkabout_1_1ModuleMapping.js  classwolkabout_1_1RegisterMappingFactory-members.html  classwolkabout_1_1RegisterMappingFactory.html  (+25 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
modbus/model/: DeviceInformation.cpp  DeviceInformation.h  DeviceTemplate.cpp  DeviceTemplate.h  DevicesConfiguration.cpp  DevicesConfiguration.h  DevicesConfigurationTemplate.cpp  DevicesConfigurationTemplate.h  MappingType.cpp  MappingType.h  ModuleConfiguration.cpp  ModuleConfiguration.h  ModuleMapping.cpp  ModuleMapping.h  SerialRtuConfiguration.cpp  SerialRtuConfiguration.h  TcpIpConfiguration.cpp  TcpIpConfiguration.h
modbus/module/: ModbusBridge.cpp  ModbusBridge.h  RegisterMappingFactory.cpp  RegisterMappingFactory.h  WolkaboutTemplateFactory.cpp  WolkaboutTemplateFactory.h
modbus/utilities/: JsonReaderParser.h
src/: ActuationHandler.h  ActuationHandlerPerDevice.h  ActuatorStatusProvider.h  ActuatorStatusProviderPerDevice.h  ConfigurationHandlerPerDevice.h  ConfigurationProviderPerDevice.h  DeviceStatusProvider.h  InboundGatewayMessageHandler.cpp  InboundGatewayMessageHandler.h  InboundMessageHandler.h  RegistrationResponseHandler.h  Wolk.cpp  Wolk.h  WolkBuilder.cpp  WolkBuilder.h
src/connectivity/: ConnectivityService.h
src/modbus/: LibModbusClient.cpp  LibModbusClient.h  LibModbusSerialRtuClient.cpp  LibModbusSerialRtuClient.h  LibModbusTcpIpClient.cpp  LibModbusTcpIpClient.h  ModbusBridge.cpp  ModbusBridge.h  ModbusClient.cpp  ModbusClient.h  ModbusConfiguration.cpp  ModbusConfiguration.h  ModbusRegisterGroup.cpp  ModbusRegisterGroup.h  ModbusRegisterMapping.cpp  ModbusRegisterMapping.h  ModbusRegisterWatcher.cpp  ModbusRegisterWatcher.h
src/model/: ActuatorCommand.cpp  ActuatorCommand.h  ActuatorManifest.h  BinaryData.cpp  Device.cpp  Device.h  DeviceInformation.h  DeviceRegistrationRequest.h  DeviceRegistrationResponse.h  DeviceReregistrationResponse.h  DeviceStatus.h  DeviceStatusResponse.cpp  DeviceStatusResponse.h  DevicesConfiguration.cpp  DevicesConfiguration.h  DevicesConfigurationTemplate.h  Message.cpp  Message.h  ModbusRegisterMapping.cpp  ModbusRegisterMapping.h  ModuleConfiguration.cpp  ModuleConfiguration.h  ModuleMapping.cpp  ModuleMapping.h  SerialRtuConfiguration.cpp  SerialRtuConfiguration.h  TcpIpConfiguration.cpp  TcpIpConfiguration.h  WolkOptional.h
src/module/: ConfigurationTemplate.cpp  ConfigurationTemplate.h  DeviceInformation.cpp  DeviceInformation.h  DevicePreparationFactory.cpp  DevicePreparationFactory.h  DeviceTemplate.cpp  DeviceTemplate.h  DeviceTemplateModule.cpp  DeviceTemplateModule.h  DevicesConfiguration.cpp  DevicesConfiguration.h  DevicesConfigurationTemplate.cpp  DevicesConfigurationTemplate.h  DevicesTemplateFactory.cpp  DevicesTemplateFactory.h  JsonReaderParser.cpp  JsonReaderParser.h  ModbusBridge.cpp  ModbusBridge.h  ModbusBridgeGetters.cpp  ModbusBridgeHandlers.cpp  ModbusDeviceFactory.cpp  ModbusDeviceFactory.h  ModuleConfiguration.cpp  ModuleConfiguration.h  RegisterMappingFactory.cpp  RegisterMappingFactory.h  SafeModeValuePersistence.cpp  SafeModeValuePersistence.h  SerialRtuConfiguration.cpp  SerialRtuConfiguration.h  TcpIpConfiguration.cpp  TcpIpConfiguration.h  WolkaboutTemplateFactory.cpp  WolkaboutTemplateFactory.h
src/persistence/: Persistence.h
src/protocol/: DataProtocol.h  Protocol.h  ProtocolManager.h  RegistrationProtocol.h  StatusProtocol.h
src/service/: DataService.cpp  (+8 more)
tests/: BridgeTest.cpp  DataServiceTests.cpp  MockDataProtocol.h  MockModbusClient.h  MockPersistance.h
tools/: make_deb.sh  make_zip.sh
(+44 files in other folders)
